--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ exigentes gracias a su enfoque innovador y su amplia gama de servicios.</p>
 <p>La plataforma presenta caracteristicas que van desde una interfaz
 intuitiva hasta un sistema de bonificaciones generoso, posicionandose
 como una alternativa solida en el competitivo mercado de casinos online.
-<strong>Spin macho casino</strong> no solo busca atraer nuevos usuarios, sino tambien
+<strong><a href="https://spinmacho.com.de" title="spin macho">spin macho</a> casino</strong> no solo busca atraer nuevos usuarios, sino tambien
 fidelizar a aquellos que buscan una experiencia de juego superior y
 confiable.</p>
 <p><img src="/images/doc_main/spinmacho-casino-analisis-completo-y-opinion-detallada-2025-1.webp" alt="spinmacho" title="spinmacho" loading="lazy"></p>
