--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ y nuestra opinion experta. Guia completa del casino online mas nuevo."><meta nam
             <h1 id="spinmacho-casino-analisis-completo-y-opinion-detallada"><strong>Spinmacho Casino: Analisis Completo y Opinion Detallada</strong></h1>
 <p><strong><a href="https://spinmacho.com.es">Spinmacho</a></strong> emerge en el panorama del juego online como una propuesta
 fresca que promete revolucionar la experiencia de los apostadores. Este
-nuevo <strong>casino spinmacho</strong> ha logrado captar la atencion de jugadores
+nuevo <strong>casino <a href="https://spin-macho.be" title="spin macho">spin macho</a></strong> ha logrado captar la atencion de jugadores
 exigentes gracias a su enfoque innovador y su amplia gama de servicios.</p>
 <p>La plataforma presenta caracteristicas que van desde una interfaz
 intuitiva hasta un sistema de bonificaciones generoso, posicionandose
